Closed Bug 216751 Opened 22 years ago Closed 19 years ago

general.config.filename set in user's prefs.js overrides setting in all.js

Categories

(Core :: Preferences: Backend, defect)

x86
All
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: jsiemes, Assigned: Bienvenu)

Details

(Keywords: fixed1.8.1.2)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.2.1) Gecko/20021130 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; de-AT; rv: 1.4) Gecko/20030625 If I set general.config.filename in all.js, and also set general.config.filename in prefs.js, mozilla tries to load the config file defined in prefs.js. Reproducible: Always Steps to Reproduce: 1. create mozilla.cfg in $MOZILLA_HOME 2. edit $MOZILLA_HOME/default/prefs/all.js, add pref("general.config.filename", "mozilla.cfg"); 3. edit $HOME/.mozilla/[..]/prefs.js, add: user_pref("general.config.filename", "ttt.cfg"); Actual Results: Mozilla doesn't start, complains about not being able to read the config file. strace shows that mozilla tries to open $MOZILLA_HOME/ttt.cfg, instead of $MOZILLA_HOME/mozilla.cfg. Expected Results: Mozilla should have picked the $MOZILLA_HOME/mozilla.cfg file. Since this allows the user to override the config file, the user may be able to create an own configuration instead of the locked down default configuration.
Confirming with current SeaMonkey trunk build, this probably also affects FF and TB.
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking1.8b4?
OS: Linux → All
Attached patch PatchSplinter Review
Assignee: ccarlen → bugzilla
Status: NEW → ASSIGNED
Attachment #189091 - Flags: review?(cbiesinger)
Attachment #189091 - Flags: review?(cbiesinger) → review?(bienvenu)
David, can you review this patch for us?
Attachment #189091 - Flags: review?(bienvenu) → review+
Attachment #189091 - Flags: superreview?(brendan)
Attachment #189091 - Flags: superreview?(brendan) → superreview+
Attachment #189091 - Flags: approval1.8b4?
Attachment #189091 - Flags: approval1.8b4? → approval1.8b4+
Patch has been checked in, probably 2nd patch will follow which will fix another part of code (not required i think, but nice-to-have).
Flags: blocking1.8b4?
this breaks MCD, as near as I can tell...will attach a fix for that in a few minutes.
Attached patch fix MCDSplinter Review
the mcd.cfg file sets prefs on the main branch, not the default branch, so we need to be checking the auto-admin prefs from the main branch.
Assignee: bugzilla → bienvenu
Attachment #253396 - Flags: superreview?(mscott)
Attachment #253396 - Flags: superreview?(mscott) → superreview+
fix landed for 2.0 - will land on the trunk when the tree is a bit greener.
Keywords: fixed1.8.1.2
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: