Bug 216751 general.config.filename set in user's prefs.js overrides setting in all.js patch by bugzilla@mcsmurf.de r=bienvenu sr=brendan a=asa